--- a/readme
+++ b/readme
@@ -4,12 +4,11 @@ elite traditional oriental martial arts
 Description:
 this is a website application for martial arts instructor master choi
 at elite toma in belcamp, md 21017
+actually it's where I will be trying out my first ever
+mvc framework. i will be rolling my own. thanks, internet help!
  
 Requirements:
 MSIE 5.0+, Firefox 3.0+, Opera 9.0+, Chrome
- 
-Known Issues:
-The high-score list is not sorted automatically.
  
 Author:
 archana sriram (solo@solostyle.net)
