--- a/readme
+++ b/readme
@@ -1,14 +1,16 @@
 Name:
 elite traditional oriental martial arts
  
-Description:
+Description: (2009)
 this is a website application for martial arts instructor master choi
 at elite toma in belcamp, md 21017
 actually it's where I will be trying out my first ever
 mvc framework. i will be rolling my own. thanks, internet help!
+
+UPDATE: (2012) No longer creating this site--client has ceased hosting payment!
  
 Requirements:
 MSIE 5.0+, Firefox 3.0+, Opera 9.0+, Chrome
  
 Author:
-archana sriram (solo@solostyle.net)
+archana sriram (solostyle)
